caso-4-ejemplo/01-kb-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kb-prod
  labels:
    run: kb-prod

spec:
  replicas: 1
  selector:
    matchLabels:
      run: kb-prod

  template:
    metadata:
      generateName: kb-prod
      labels:
        run: kb-prod
    
    spec:
      containers:
        - name: kb-prod
          image: kanboard/kanboard:v1.2.9
          imagePullPolicy: Always

          ports:
            - name: kb-prod
              containerPort: 80
