caso-4-ejemplo/04-kb-db-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kb-prod-db
  labels:
    run: kb-prod-db

spec:
  replicas: 1
  selector:
    matchLabels:
      run: kb-prod-db
  serviceName: kb-prod-db

  template:
    metadata:
      generateName: kb-prod-db
      labels:
        run: kb-prod-db
    
    spec:
      containers:
        - name: kb-prod-db
          image: mariadb:11
          imagePullPolicy: Always
      
          ports:
            - name: kb-prod-db
              containerPort: 3306
      
          volumeMounts:
            - mountPath: "/var/lib/mysql"
              name: mariadb-data
              subPath: db
      
      volumes:
        - name: secret-volume
          secret:
            secretName: db-secret
  
  volumeClaimTemplates:
    - metadata:
        name: mariadb-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
