caso-4-ejemplo/02-kb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kb-prod
  labels:
    run: kb-prod

spec:
  selector:
    run: kb-prod

  ports:
  - port: 80
    name: kb-prod
    targetPort: 80
